--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^17.0.1",
+    "react-bootstrap-icons": "^1.2.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1"
   },
